--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.71.1",
+    "react-is": "^19.0.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.6.0",
